# aero-offers

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  analytics.md  clean_data.py  db.py  docker-compose.yaml  exchange_rates.py  get_exchange_rates.py  logging.conf  run_web.sh  settings.py  settings_dev.py  settings_prod.py  staticwebapp.config.json  todo.md
.github/: dependabot.yml
.github/workflows/: cd-backend.yaml  cd-ui.yaml  cd.yaml  ci.yaml  db-migration.yaml  deploy-infra.yaml
ansible/: deploy.yml  hosts  setup_db.yml  setup_vm.yml  uwsgi.service
ansible/roles/backend/tasks/: main.yml
ansible/roles/db/files/: pg_hba.conf
ansible/roles/db/tasks/: main.yml
ansible/roles/nginx/files/: nginx.conf
ansible/roles/nginx/tasks/: main.yml
azure/: setup_azure_infra.sh
backend/: .env.template  .gitignore  AGENTS.md  Dockerfile  db.py  distance_metrics.py  exchange_rates.py  fetch_offers.py  init_dev_env.sh  job_fetch_offers.py  job_reclassify_offers.py  mailer.py  my_logging.py  pipelines.py  pyproject.toml  reclassify_offers.py  requirements.txt  run_api.sh  run_api_in_docker.sh  run_classifier.sh  run_classifier_in_docker.sh  run_lint.sh  run_reclassifier.sh  run_spiders.sh  run_spiders_in_docker.sh  run_tests.sh  run_update_fx_rates.sh  run_update_offers.sh  settings.py  start_api.sh
backend/api/: flask_app.py
backend/classifier/: classifier.py  models.json
backend/spiders/: FlugzeugMarktDeSpider.py  PlaneCheckComSpider.py  SegelflugDeSpider.py  SoaringDeSpider.py
backend/src/: db.py  fx.py  fx_db.py  job_fetch_offers.py  job_reclassify_offers.py  job_update_fx_rates.py  logging.conf  mailer.py  my_logging.py  offer.py  offers_db.py  pipelines.py  settings.py
backend/src/aerooffers/: __init__.py  db.py  fx.py  job_classified_offers_missing_fields.py  job_classify_offers.py  job_fetch_offers.py  job_mark_failed_classifications_for_reprocessing.py  job_mark_for_reprocessing.py  job_reclassify_offers.py  logging.conf  mailer.py  my_logging.py  offer.py  offers_db.py  page_content_storage.py  pipelines.py  scrapy.cfg  settings.py  utils.py
backend/src/aerooffers/api/: flask_app.py
backend/src/aerooffers/classifier/: classifier.py  classifiers.py  gemini_llm_classifier.py  models.json  rule_based_classifier.py
backend/src/aerooffers/config/: gunicorn.py
backend/src/aerooffers/spiders/: FlugzeugMarktDeSpider.py  SegelflugDeSpider.py  SoaringDeSpider.py
backend/src/api/: flask_app.py
backend/src/classifier/: classifier.py
backend/src/config/: gunicorn.py
backend/src/spiders/: FlugzeugMarktDeSpider.py  SoaringDeSpider.py
backend/tests/: conftest.py  ddl.sql  eurofxref-daily.xml  requirements.txt  test_FlugzeugMarktDeSpider.py  test_PlaneCheckComSpider.py  test_SegelflugDeSpider.py  test_SoaringDeSpider.py  test__testcontainers_setup.py  test_aircraft_type_classifier.py  test_classifier.py  test_classify_offers_job.py  test_db.py  test_exchange_rates.py  test_fx.py  test_model_classifier.py  test_offers_db.py  test_page_content_storage.py  test_pipelines.py  test_reclassify_offers_job.py  util.py
backend/tests/api/: test_api.py
backend/tests/classifier/: test_aircraft_type_classifier.py  test_classifier.py  test_gemini_llm_classifiers.py  test_model_classifier.py  test_rule_based_classifier.py
backend/tests/samples/: flugzeugmarkt_de_overview.html
backend/tests/spiders/: test_FlugzeugMarktDeSpider.py  test_SegelflugDeSpider.py  test_SoaringDeSpider.py
backend/tests/spiders/samples/: flugzeugmarkt_de_listing.html  flugzeugmarkt_de_offer.html  planecheck_com_offer_piper.html  segelflug_de_listing.html  segelflug_de_offer.html  segelflug_de_offer_cobra.html  segelflug_de_offer_tmg.html  soaring_de_listing.html
backend/tools/: job_migrate_data.py
backend/web/: flask_app.py  uwsgi.ini
charts/: chart_js.html  chartist.html
classifier/: classifier.py  models.json
db/: ddl.sql  docker-compose.yaml  run_migrations_test.sh
db/migrations/: V1.1__aero_offers_created_idx.sql  V1__baseline.sql  V2__aero_offers_created_idx.sql  V2__aero_offers_date_idx.sql  disclaimer.txt
frontend/: .env.development  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  http-common.js  main.js
frontend/src/components/: FeedbackComponent.vue  OfferComponent.vue
frontend/src/router/: index.js
frontend/src/views/: Datenschutz.vue  Impressum.vue  ModelInformation.vue  Offers.vue
frontend/tests/unit/: example.spec.js
hooks/: pre-commit
infra/: setup_azure_infra.sh
terraform/: .terraform.lock.hcl  AGENTS.md  README.md  backend.tf  locals.tf  main.tf  outputs.tf  setup-azure-bootstrap.sh  terraform.tfvars.example  variables.tf
tests/: classifier_test_data.json  classifier_test_data_aircraft_type.json  test_PlaneCheckComSpider.py  test_aircraft_type_classifier.py  test_clean_data.py  test_db.py  test_exchange_rates.py  test_model_classifier.py
tests/samples/: flugzeugmarkt_de_offer.html  flugzeugmarkt_de_overview.html  planecheck_com_offer_beech.html  planecheck_com_start_url.html  segelflug_de_offer_different_details.html  segelflug_de_offer_ls3.html  segelflug_de_offer_tmg.html
ui/: .env.development  .env.local  .env.production  .eslintrc.cjs  .gitignore  .prettierrc.json  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
ui/public/: staticwebapp.config.json
ui/src/: App.vue  http-common.js  main.js  utils.js
ui/src/components/: AircraftModelFilter.vue  OfferComponent.vue  OfferThumb.vue
ui/src/components/__tests__/: AircraftModelFilter.spec.js  OfferComponent.spec.js  OfferThumb.spec.js
ui/src/router/: index.js
ui/src/views/: ModelDetails.vue  ModelInformation.vue  OfferDetails.vue  Offers.vue  OffersList.vue
ui/src/views/__tests__/: ModelDetails.spec.js  offers_resp.json
web/: flask_app.py  wsgi.py
